# Telegram-Aio-Downloader

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MINIAPP_SETUP.md  README.md  docker-compose.yml  isort-config.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/bot/: __init__.py  dashboard.py  telegram_bot.py
app/config/: settings.py
app/downloaders/: __init__.py  factory.py  registry.py
app/downloaders/base/: __init__.py  downloader.py
app/downloaders/gallery/: __init__.py  provider.py
app/downloaders/hanime/: __init__.py  provider.py
app/downloaders/hentai/: __init__.py  provider.py
app/downloaders/jdownloader/: __init__.py  provider.py
app/downloaders/spotify/: __init__.py  provider.py
app/downloaders/torrents/: __init__.py  aria2.py
app/handlers/: __init__.py  forwarded_media.py
app/infrastructure/: __init__.py  aria2_rpc.py
app/models/: download.py
app/services/: __init__.py  adult_video_resolver.py  archive.py  batch_download.py  cloud_mirror.py  file_links.py  hentai_playlist.py  javhdporn.py  manga.py  pornhub_model.py  rss.py  runtime_dependencies.py  thumbnails.py  user_settings.py  video_sites.py
app/web/: app.py
docs/: SUPPORTED_SITES.md  architecture.md  development.md  extension-guide.md  integration-roadmap.md  miniapp-guide.md
requirements/: base.txt  dev.txt
scripts/: organize_downloaded_videos.py  setup_ubuntu.sh  start_with_cloudflare_tunnel.sh
tests/downloaders/: test_gallery_provider.py  test_hanime_provider.py  test_jdownloader_provider.py  test_spotify_provider.py  test_youtube_provider.py
tests/unit/: test_adult_video_resolver.py  test_aria2_rpc.py  test_batch_download.py  test_cloud_mirror.py  test_downloader_registry.py  test_file_links.py  test_hentai_playlist.py  test_javhdporn.py  test_manga_service.py  test_pornhub_model.py  test_prowlarr_client.py  test_rarbg_crawler.py  test_rss.py  test_runtime_dependencies.py  test_settings.py  test_video_sites.py
(+20 files in other folders)
